<resources>
    <string name="app_name">StudentManagement</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="student">Quản lý sinh viên</string>
    <string name="admin_collage">Quản lý giảng viên</string>
    <string name="admin_subject">Quản lý môn học</string>
    <string name="admin_class">Quản lý lớp</string>
    <string name="profile">Trang cá nhân</string>
    <string name="admin_user">Quản lý tài khoản</string>
    <string name="admin_statistical">Thống kê</string>
    <string name="inputRequired">Vui lòng nhập dữ liệu</string>
</resources>